# blackbox

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  README.md  blackbox.tex  package.json
.cargo/: credentials.toml
confidential-ixs/: Cargo.toml  build.rs
confidential-ixs/src/: lib.rs
programs/blackbox/: Cargo.toml
programs/blackbox/src/: lib.rs  state.rs  voting_example.rs
tests/: voting.ts
